fixing errors in notification tests