@@ -1,5 +1,6 @@
 package com.example.volunteerMatching.controllers;
 
+import com.example.volunteerMatching.controllers.NotificationController;
 import com.example.volunteerMatching.models.Notification;
 import com.example.volunteerMatching.services.NotificationService;
 import org.junit.jupiter.api.BeforeEach;
@@ -10,15 +11,18 @@ import org.mockito.MockitoAnnotations;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
-
+import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.List;
-
-import static org.mockito.Mockito.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-class NotificationControllerTest {
+public class NotificationControllerTest {
+
     private MockMvc mockMvc;
 
     @Mock
@@ -28,45 +32,48 @@ class NotificationControllerTest {
     private NotificationController notificationController;
 
     @BeforeEach
-    void setUp() {
+    public void setUp() {
         MockitoAnnotations.openMocks(this);
         mockMvc = MockMvcBuilders.standaloneSetup(notificationController).build();
     }
 
     @Test
-    void testAddNotification() throws Exception {
-        Notification notification = new Notification("System Update", "New features added", "announcement");
-        when(notificationService.addNotification(anyString(), anyString(), anyString())).thenReturn(notification);
+    public void testGetAllNotifications() throws Exception {
+        LocalDateTime now = LocalDateTime.now().withNano(0);
+        Notification notification1 = new Notification("Reminder", "Meeting at 3 PM", "notification", now);
+        Notification notification2 = new Notification("Alert", "System maintenance tonight", "announcement", now);
+        List<Notification> notifications = Arrays.asList(notification1, notification2);
 
-        mockMvc.perform(post("/notifications")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content("{\"title\":\"System Update\", \"message\":\"New features added\", \"type\":\"announcement\"}"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.title").value("System Update"));
-    }
-
-    @Test
-    void testGetAllNotifications() throws Exception {
-        Notification notification1 = new Notification("Reminder", "Meeting at 3 PM", "notification");
-        Notification notification2 = new Notification("Alert", "System maintenance tonight", "announcement");
-
-        when(notificationService.getAllNotifications()).thenReturn(List.of(notification1, notification2));
+        when(notificationService.getAllNotifications()).thenReturn(notifications);
 
         mockMvc.perform(get("/notifications"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.length()").value(2))
-                .andExpect(jsonPath("$[0].title").value("Reminder"))
-                .andExpect(jsonPath("$[1].title").value("Alert"));
+                .andExpect(content().json("[{'title':'Reminder','message':'Meeting at 3 PM','type':'notification','timestamp':'" + notification1.getTimestamp() + "'},{'title':'Alert','message':'System maintenance tonight','type':'announcement','timestamp':'" + notification2.getTimestamp() + "'}]"));
     }
 
     @Test
-    void testGetNotificationsByType() throws Exception {
-        Notification notification = new Notification("Maintenance", "Scheduled server downtime", "announcement");
-        when(notificationService.getNotificationsByType("announcement")).thenReturn(List.of(notification));
+    public void testGetNotificationsByType() throws Exception {
+        Notification notification = new Notification("Reminder", "Meeting at 3 PM", "notification", LocalDateTime.now().withNano(0));
+        List<Notification> notifications = Arrays.asList(notification);
 
-        mockMvc.perform(get("/notifications/announcement"))
+        when(notificationService.getNotificationsByType("notification")).thenReturn(notifications);
+
+        mockMvc.perform(get("/notifications/notification"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.length()").value(1))
-                .andExpect(jsonPath("$[0].title").value("Maintenance"));
+                .andExpect(content().json("[{'title':'Reminder','message':'Meeting at 3 PM','type':'notification','timestamp':'" + notification.getTimestamp() + "'}]"));
+    }
+
+    @Test
+    public void testAddNotification() throws Exception {
+        Notification notification = new Notification("Maintenance", "Scheduled server downtime", "announcement", LocalDateTime.now());
+
+        when(notificationService.addNotification(any(String.class), any(String.class), any(String.class)))
+                .thenReturn(notification);
+
+        mockMvc.perform(post("/notifications")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content("{\"title\":\"Maintenance\",\"message\":\"Scheduled server downtime\",\"type\":\"announcement\",\"timestamp\":\"" + notification.getTimestamp().toString() + "\"}"))
+                .andExpect(status().isOk())
+                .andExpect(content().json("{'title':'Maintenance','message':'Scheduled server downtime','type':'announcement','timestamp':'" + notification.getTimestamp().toString() + "'}"));
     }
 }
